Fix alignment footer buttons

--- a/src/App.css
+++ b/src/App.css
@@ -143,40 +143,6 @@ main > h1 + * {
   height: 100%;
 }
 
-footer .btn-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  gap: 1rem;
-  text-align: center;
-  margin-bottom: 0.5rem;
-}
-
-nav {
-  max-width: 50rem;
-}
-
-.nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 0.75rem;
-  margin: 0;
-  padding: 0;
-}
-
-.nav li {
-  margin: 0.15rem 0.5rem;
-  max-width: 65ch;
-}
-
-.nav a {
-  line-height: 1.8;
-  cursor: pointer;
-  text-decoration: none;
-}
-
 .btn {
   font-family: var(--font-family-headings);
   background-color: white;
@@ -230,12 +196,6 @@ a.active {
   letter-spacing: 1px;
   height: var(--icon-height);
   width: var(--icon-height);
-}
-
-.btn-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem;
 }
 
 .spinner-container {
@@ -667,4 +627,53 @@ a.active .icon {
 .icons {
   display: flex;
   gap: 1rem;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 0.5rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+nav {
+  max-width: 50rem;
+}
+
+.nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.75rem;
+  margin: 0;
+  padding: 0;
+}
+
+.nav a {
+  line-height: 1.8;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 568px) {
+  .nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 0.75rem;
+    margin: 0;
+    padding: 0;
+  }
 }
